--- a/modules/insurance_collection/locale/fr_FR.po
+++ b/modules/insurance_collection/locale/fr_FR.po
@@ -10,20 +10,20 @@ msgctxt "field:collection.create.parameters,contract:"
 msgid "Contract"
 msgstr "Contrat"
 
-msgctxt "wizard_button:collection.collection_wizard,assign,check_amount:"
+msgctxt "wizard_button:collection.create,assign,check_amount:"
 msgid "Validate"
 msgstr "Valider"
 
-msgctxt "wizard_button:collection.collection_wizard,assign,end:"
+msgctxt "wizard_button:collection.create,assign,end:"
 msgid "Cancel"
 msgstr "Annuler"
 
 msgctxt ""
-"wizard_button:collection.collection_wizard,input_collection_parameters,assign:"
+"wizard_button:collection.create,input_collection_parameters,assign:"
 msgid "Assign"
 msgstr "Affecter"
 
 msgctxt ""
-"wizard_button:collection.collection_wizard,input_collection_parameters,end:"
+"wizard_button:collection.create,input_collection_parameters,end:"
 msgid "Cancel"
 msgstr "Annuler"
