--- a/modules/life_billing_collective_fr/locale/fr_FR.po
+++ b/modules/life_billing_collective_fr/locale/fr_FR.po
@@ -1094,20 +1094,20 @@ msgctxt "wizard_button:billing.rate_note_reception,select_note,preview_bill:"
 msgid "Continue"
 msgstr "Continuer"
 
-msgctxt "wizard_button:collection.collection_wizard,assign,check_amount:"
+msgctxt "wizard_button:collection.create,assign,check_amount:"
 msgid "Validate"
 msgstr "Valider"
 
-msgctxt "wizard_button:collection.collection_wizard,assign,end:"
+msgctxt "wizard_button:collection.create,assign,end:"
 msgid "Cancel"
 msgstr "Annuler"
 
 msgctxt ""
-"wizard_button:collection.collection_wizard,input_collection_parameters,assign:"
+"wizard_button:collection.create,input_collection_parameters,assign:"
 msgid "Assign"
 msgstr "Affecter"
 
 msgctxt ""
-"wizard_button:collection.collection_wizard,input_collection_parameters,end:"
+"wizard_button:collection.create,input_collection_parameters,end:"
 msgid "Cancel"
 msgstr "Annuler"
