--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -178,39 +178,39 @@ msgctxt "field:contract.option-commission.option,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:commission.component-coverage,component:"
+msgctxt "field:commission.option.description-option.description,component:"
 msgid "Component"
 msgstr "Composante"
 
-msgctxt "field:commission.component-coverage,coverage:"
+msgctxt "field:commission.option.description-option.description,coverage:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "field:commission.component-coverage,create_date:"
+msgctxt "field:commission.option.description-option.description,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:commission.component-coverage,create_date_:"
+msgctxt "field:commission.option.description-option.description,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:commission.component-coverage,create_uid:"
+msgctxt "field:commission.option.description-option.description,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:commission.component-coverage,id:"
+msgctxt "field:commission.option.description-option.description,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:commission.component-coverage,rec_name:"
+msgctxt "field:commission.option.description-option.description,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:commission.component-coverage,write_date:"
+msgctxt "field:commission.option.description-option.description,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:commission.component-coverage,write_uid:"
+msgctxt "field:commission.option.description-option.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -450,7 +450,7 @@ msgctxt "model:contract.option-commission.option,name:"
 msgid "Compensated Option"
 msgstr "Option Commissionnée"
 
-msgctxt "model:commission.component-coverage,name:"
+msgctxt "model:commission.option.description-option.description,name:"
 msgid "Relation Commission Component and Coverage"
 msgstr "Relation Composante de Com - Garantie"
 
