--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:commission.commission_rule:"
+msgctxt "error:commission.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -34,75 +34,75 @@ msgctxt "field:contract.billing.premium,estimated_wo_com:"
 msgid "Estimated w/o coms"
 msgstr "Montant estimé hors Commissions"
 
-msgctxt "field:commission.commission_rule,config_kind:"
+msgctxt "field:commission.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:commission.commission_rule,create_date:"
+msgctxt "field:commission.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:commission.commission_rule,create_date_:"
+msgctxt "field:commission.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:commission.commission_rule,create_uid:"
+msgctxt "field:commission.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:commission.commission_rule,end_date:"
+msgctxt "field:commission.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:commission.commission_rule,id:"
+msgctxt "field:commission.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:commission.commission_rule,must_expand_tree:"
+msgctxt "field:commission.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:commission.commission_rule,offered:"
+msgctxt "field:commission.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:commission.commission_rule,rate:"
+msgctxt "field:commission.rule,rate:"
 msgid "Rate"
 msgstr "Taux"
 
-msgctxt "field:commission.commission_rule,rec_name:"
+msgctxt "field:commission.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:commission.commission_rule,rule:"
+msgctxt "field:commission.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:commission.commission_rule,rule_complementary_data:"
+msgctxt "field:commission.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:commission.commission_rule,start_date:"
+msgctxt "field:commission.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:commission.commission_rule,template:"
+msgctxt "field:commission.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:commission.commission_rule,template_behaviour:"
+msgctxt "field:commission.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:commission.commission_rule,view_rec_name:"
+msgctxt "field:commission.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:commission.commission_rule,write_date:"
+msgctxt "field:commission.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:commission.commission_rule,write_uid:"
+msgctxt "field:commission.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -442,7 +442,7 @@ msgctxt "field:party.party,is_broker:"
 msgid "Broker"
 msgstr "Courtier"
 
-msgctxt "model:commission.commission_rule,name:"
+msgctxt "model:commission.rule,name:"
 msgid "Commission Rule"
 msgstr "Règle de Commissionnement"
 
@@ -514,35 +514,35 @@ msgctxt "model:tag,name:tag_commission"
 msgid "Commission"
 msgstr "Commission"
 
-msgctxt "selection:commission.commission_rule,config_kind:"
+msgctxt "selection:commission.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:commission.commission_rule,config_kind:"
+msgctxt "selection:commission.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:commission.commission_rule,offered:"
+msgctxt "selection:commission.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:commission.commission_rule,offered:"
+msgctxt "selection:commission.rule,offered:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "selection:commission.commission_rule,offered:"
+msgctxt "selection:commission.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:commission.commission_rule,template_behaviour:"
+msgctxt "selection:commission.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:commission.commission_rule,template_behaviour:"
+msgctxt "selection:commission.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:commission.commission_rule,template_behaviour:"
+msgctxt "selection:commission.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -578,11 +578,11 @@ msgctxt "selection:offered.product,kind:"
 msgid "Commission"
 msgstr "Commission"
 
-msgctxt "view:commission.commission_rule:"
+msgctxt "view:commission.rule:"
 msgid "%"
 msgstr "%"
 
-msgctxt "view:commission.commission_rule:"
+msgctxt "view:commission.rule:"
 msgid "Commission rule"
 msgstr "Règle de Commissionnement"
 
